Update the whats new to reflect 0.12.1
Made a minor change to the 0.12.0 what's new to
provide information about the minor update 0.12.1.

Signed-off-by: Sue Chaplain <sue_chaplain@uk.ibm.com>

--- a/oj9_whatsnew.html
+++ b/oj9_whatsnew.html
@@ -81,9 +81,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     <div class="f-section-item" id="openj90120">
     <div class="f-content-container">
-      <h3>Eclipse OpenJ9 version 0.12.0 released</h3>
-      <p><i>31st January 2019</i></p>
-      <p>Our latest version of Eclipse OpenJ9 is now released, with a number of improvements and new benefits. Here are the highlights:
+      <h3>Eclipse OpenJ9 version 0.12.1 released</h3>
+      <p><i>5th Februrary 2019</i></p>
+	  <p>We've released a minor update to version 0.12.0 due to issue <a href="https://github.com/eclipse/openj9/issues/4530" target="_blank">4530</a>,
+		which affects OpenSSL cryptographic acceleration with the Digest algorithm. Support for the Digest algorithm is currently turned off.</p>
+      <p>Eclipse OpenJ9 V0.12.0 contains a number of improvements and new benefits. Here are the highlights:
       </p>
 	  <p><i class="fa fa-hand-o-right" aria-hidden="true" style="color: #407471;opacity: 0.7; font-size:.9rem"></i> <strong>Support for macOS&reg;</strong>
       </p>
