Complete the removal of old slack invite process
Found a link in an old what's new section to our
old mechanism of requesting access to slack (via
now service).

Also removed redundant page where the now service
was hosted in an iframe.

Signed-off-by: Sue Chaplain <sue_chaplain@uk.ibm.com>

--- a/oj9_whatsnew.html
+++ b/oj9_whatsnew.html
@@ -24,6 +24,7 @@ The project website pages cannot be redistributed
   <meta name="twitter:title" content="Eclipse OpenJ9" />
   <meta name="twitter:description" content="Give your Java application a thrill - run it on OpenJDK with OpenJ9!" />
   <meta name="twitter:image" content="assets/openj9_hex.png" />
+  <meta name="twitter:dnt" content="on">
   <title>OpenJ9 - What's new?</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
@@ -423,7 +424,7 @@ data-show-count="false">Tweet</a>
       with OpenJ9. If you just want to come and listen, well that's fine too!</p>
       <p>Schedules, agendas, minutes, and recordings are posted in the OpenJ9 slack workspace, in the #planning channel.
       <p>To update your Google calendar: <a target="_blank" href="https://calendar.google.com/calendar?cid=YjBnYjB0ZzNxaTZhb3NhZGZnbG0wa3BjY29AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ">add OpenJ9 hangouts</a>.</p>
-      To join slack:  <a href="oj9_joinslack.html">request an invitation</a>.
+      To join slack:  <a href="https://join.slack.com/t/openj9/shared_invite/enQtNDU4MDI4Mjk0MTk2LWM2MjliMTQ4NWM5YjMwNTViOTgzMzM2ZDhlOWJmZTc1MjhmYmRjMDg2NDljNGM0YTAwOWRiZDE0YzI0NjgyOWI">request an invitation</a>.
           </p>
 
 <!-- Keep as-is except edit ID in URL and change "text=" -->
@@ -444,7 +445,7 @@ data-show-count="false">Tweet</a>
           <p><i>5th December 2017</i></p>
           <p>We're pleased to announce the introduction of a new slack workspace, which we hope will become a popular medium for collaborating with the OpenJ9 project team in addition to our Eclipse mailing list. Whether you have questions to ask or experiences to  share, we'd love to hear from you.
           </p>
-          <p>Join slack:  <a href="oj9_joinslack.html">request an invitation</a>.
+          <p>Join slack:  <a href="https://join.slack.com/t/openj9/shared_invite/enQtNDU4MDI4Mjk0MTk2LWM2MjliMTQ4NWM5YjMwNTViOTgzMzM2ZDhlOWJmZTc1MjhmYmRjMDg2NDljNGM0YTAwOWRiZDE0YzI0NjgyOWI">request an invitation</a>.
           </p>
 
 <!-- Keep as-is except edit ID in URL and change "text=" -->
