Enable "wrap in quotes" by default
Signed-off-by: Keith W. Campbell <keithc@ca.ibm.com>

--- a/tools/xtrace_option_builder.html
+++ b/tools/xtrace_option_builder.html
@@ -2760,7 +2760,7 @@ The project website pages cannot be redistributed
 <b><p id="result" style="font-size: 14pt; font-family:courier;">&nbsp;</p></b>
 <hr>
 <p>
-	<input type="checkbox" id="wrap_in_quotes" name="wrap_in_quotes" value="wrap_in_quotes" onchange="processChange(this)">
+	<input type="checkbox" id="wrap_in_quotes" name="wrap_in_quotes" value="wrap_in_quotes" onchange="processChange(this)" checked>
 	<label for="wrap_in_quotes">Wrap in quotes (for use in a shell)</label>
 </p>
 <p>
